# easy-capture

./: .gitattributes  .gitignore  CHANGELOG.md  HANDOFF.md  README.md  pyproject.toml  requirements.txt
docs/: RFP.md  architecture.md  data-flow.md  error-handling.md  poc-plan.md  resources.md  use-flow.md  wireframes.md
docs/adr/: 0001-sam2-for-tracking.md  0002-pyside6-gui.md  0003-grounding-dino-labeling.md  0004-upscaler-realesrgan-swinir.md  0005-video-io-pyav-vfr.md  0006-shot-boundary-reid.md  0007-cpu-dev-strategy.md  0008-app-usecase-layer.md  0009-upscale-export-integration.md  0010-video-segmentation-backend.md  0011-video-export-location.md  0012-detection-backend.md  0013-time-remap-location.md  0014-box-prompt-mask-refine.md  0015-negative-point-prompt.md  0016-cut-selection-ui.md
docs/plans/: easy-capture-plan.md  (+7 more)
poc/: REPORT.md  h1_track.py  h2_cut_retrack.py  h4_audio_sync.py  make_test_clip.py  probe_env.py  requirements-cpu.txt
tests/: test_coords.py  test_crop.py  test_crop_size.py  test_cut_selection.py  test_cut_selection_panel.py  test_device.py  test_frame_canvas.py  test_gap_policy.py  test_image_capture.py  test_image_export.py  test_mask_refine.py  test_overlay.py  test_rematch.py  test_segment_table.py  test_shot_detect.py  test_shot_split.py  test_timeremap.py  test_upscale.py  test_video_capture.py  test_video_capture_box.py  test_video_capture_negative.py  test_video_capture_selection.py  test_video_export.py  test_video_window_cut_selection.py  test_video_window_gap.py  test_video_window_segment.py  test_video_window_trim_loop.py
(+52 files in other folders)
